# app-qg-api

./: .dockerignore  .env.example  Dockerfile  README.md  compose.prod.yaml  docker-compose.yml  pyproject.toml
.github/: cliff.toml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker-build.yml  release.yml  security.yml  zap-scan.yml
.zap/: rules.tsv
docs/: mongo.md  postgres.md  rabbitmq.md  testing.md
sql/schemas/: 01-tables.sql  02-constraints.sql  03-data.sql  04-business-data.sql  05-additional-vehicles.sql  README.md
src/app/: main.py
src/app/api/: dependencies.py
src/app/api/routes/: __init__.py  events.py  examples.py  geocode.py  health.py  incidents.py  qg.py  routing.py  terrain.py  utils.py
src/app/core/: config.py  exceptions.py  logging.py
src/app/core/security/: __init__.py  keycloak.py
src/app/models/: __init__.py  article.py  assignment_proposals.py  assignment_requests.py  base.py  casualties.py  consumables.py  enums.py  incidents.py  interest_points.py  interventions.py  operators.py  user.py  vehicles.py
src/app/schemas/: base.py
src/app/schemas/assignment_proposals/: __init__.py  item.py  missing.py  proposal.py
src/app/schemas/casualties/: __init__.py  casualty.py  casualty_status.py  casualty_transport.py  casualty_type.py
src/app/services/: assignment_proposals.py  assignment_requests.py  qg.py  vehicle_assignments.py  vehicles.py
tests/: conftest.py  test_app.py
tests/api/: test_geocode_reverse.py  test_health.py  test_terrain.py
tests/services/: test_sse_manager.py
(+107 files in other folders)
