[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/app"]

[project]
name = "app-qg-api"
version = "0.1.0"
description = "FastAPI starter with async connectors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
    "motor>=3.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "aio-pika>=9.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "app-qg-api",
]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
app-qg-api = { workspace = true, editable = true }
